<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
	android:background="@drawable/background"
    android:orientation="vertical" >
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
		android:gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/hello" />
	
	<TextView
		android:id="@+id/Informations"
		android:gravity="center"
		android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
	
	<EditText
		android:id="@+id/ToCrack"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:layout_margin="20dp" />
	<Button
		android:id="@+id/CrackIt"
		android:gravity="center"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
		android:layout_margin="20dp"
		android:text="@string/crackit" />
	<Button
		android:id="@+id/tomd5"
		android:gravity="center"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
		android:layout_margin="20dp"
		android:text="@string/tomd5" />
	<Button
		android:id="@+id/selectfile"
		android:gravity="center"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
		android:layout_margin="20dp"
		android:text="@string/selectfile" />
	
	<Button 
		android:id="@+id/change"
		android:gravity="center"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
		android:layout_margin="20dp"
		android:text="@string/change" />
	
	<Button
		android:id="@+id/stop"
		android:gravity="center"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
		android:layout_margin="20dp"
		android:text="@string/stop" />
	
	<TextView
		android:id="@+id/Informations"
		android:layout_width="fill_parent"
        android:layout_height="wrap_content"
		android:gravity="bottom" />
		

</LinearLayout>
</ScrollView>
